fix float value in global config